# xrypton

./: LICENSE  README.md  api.Dockerfile  compose.yaml  web.Dockerfile
api/: .env.example  Cargo.toml
api/migrations/postgres/: 0001_init.sql  0008_push_multi_account.sql  0009_atproto.sql  0011_atproto_multi_account.sql  0013_x_accounts.sql  0014_wot_and_nonces.sql  0015_profile_detached_signatures.sql  0016_deleted_users.sql  0017_secret_key_backups.sql
api/migrations/sqlite/: 0005_temporary_session.sql  0008_push_multi_account.sql  0009_atproto.sql  0012_primary_key_fingerprint.sql  0013_x_accounts.sql  0014_wot_and_nonces.sql  0016_deleted_users.sql  0017_secret_key_backups.sql
api/src/: config.rs  error.rs  lib.rs  types.rs
api/src/auth/: mod.rs
api/src/db/: atproto.rs  backups.rs  chat.rs  contacts.rs  deleted_users.rs  files.rs  messages.rs  mod.rs  models.rs  nonces.rs  threads.rs  users.rs  wot.rs  x.rs
api/src/federation/: client.rs  dns.rs  mod.rs  verify.rs
api/src/push/: mod.rs
api/src/routes/: atproto.rs  backup.rs  chat.rs  file.rs  keys.rs  message.rs  mod.rs  realtime.rs  user.rs  x.rs
api/src/storage/: mod.rs
common/: Cargo.toml  package.json
crypto-wasm/: Cargo.toml
crypto-wasm/src/: keys.rs  lib.rs
crypto-web/: package.json  pnpm-lock.yaml
crypto-web/crypto-wasm/: Cargo.toml
crypto-web/crypto-wasm/src/: keys.rs  lib.rs
crypton-api/: .env.example  Cargo.toml  README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
crypton-api/migrations/postgres/: 0002_contacts.sql  0003_archive.sql  0004_user_delete_fk.sql  0005_temporary_session.sql  0006_distributed.sql  0007_files.sql  0009_atproto.sql  0010_pubkey_post.sql  0011_atproto_multi_account.sql
crypton-api/migrations/sqlite/: 0001_init.sql  0002_contacts.sql  0003_archive.sql  0004_user_delete_fk.sql  0006_distributed.sql  0007_files.sql
crypton-api/src/: config.rs  error.rs  index.ts  lib.rs  storage.ts  types.rs
crypton-api/src/auth/: mod.rs
crypton-api/src/db/: chat.rs  contacts.rs  messages.rs  mod.rs  models.rs  nonces.rs  push.rs  threads.rs  users.rs
crypton-api/src/federation/: client.rs  mod.rs  verify.rs
crypton-api/src/push/: mod.rs
crypton-api/src/routes/: atproto.rs  chat.rs  contacts.rs  federation.rs  message.rs  mod.rs  notification.rs  thread.rs  user.rs
crypton-common/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
crypton-ecs/: .terraform.lock.hcl  alb.tf  ecs.tf  main.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  terraform.tfvars.example  variables.tf  vpc.tf
crypton-wasm/: Cargo.toml  README.md
crypton-web/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
ecs/: .terraform.lock.hcl  alb.tf  ecr.tf  ecs.tf  iam.tf  logs.tf  main.tf  outputs.tf  security_groups.tf  terraform.tfvars.example  variables.tf
(+237 files in other folders)
