[package]
name = "xrypton-api"
version = "0.1.0"
edition = "2024"

[dependencies]
xrypton-common = { path = "../common" }

axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["query"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

sqlx = { version = "0.8", features = ["migrate", "runtime-tokio"] }

aws-sdk-s3 = "1"
aws-config = "1"

uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

hickory-resolver = "0.25"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
web-push = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"
atrium-api = "0.25.7"
atrium-xrpc-client = "0.5.15"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres", "sqlx/chrono"]
