[package]
name = "crypton-api"
version = "0.1.0"
edition = "2024"

[dependencies]
crypton-common = { path = "../crypton-common" }

axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

sqlx = { version = "0.8", features = ["migrate", "runtime-tokio"] }

aws-sdk-s3 = "1"
aws-config = "1"

uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

web-push = "0.11"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres", "sqlx/chrono"]
